--- a/index.html
+++ b/index.html
@@ -9,15 +9,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <section>
+        <section class="top_banner">
                 <div class="half_width">
-                        <h1>Welcome to copoet</h1>
+                        <h1>Welcome to <span class="muntasir">co</span> poet</h1>
                         <h1> <span class="muntasir">Muntasir</span></h1>
                         <h3>World class web dev</h3>
                         <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        <a class="button" target="_blank" href="https://www.facebook.com/muntasirruhul/"> Hire me</a>
                 </div>
                 <div class="half_width">
                         <img src="images/jhankar.png" alt="">
+                </div>
+        </section>
+        <section class="dream_big">
+                <div class="half_width">
+                    <img src="images/jhankar2.png" alt="">
+
+                </div>
+                <div class="half_width">
+                    <h2 class="dream_text"> Dream Big</h2>
+                    <h3> Become a world class developer</h3>
+                    <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+
                 </div>
         </section>
     
