--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <h4>VISEROY IMIGRESEN AGENCY</h4>
                 <h6>LOCAL AGECNY FOR VISA, eVISA PROCESSOR</h6>
             </div>
-            <div class="MALAYSIA">
-                <img src="images/malaysia.png" alt="">
+            <div class="textlogo">
+                <img src="images/textlogo.png" alt="">
             </div>
             <div class="bottom-right">
                 <h6>Malaysia Electronic Visa Facititation & Services</h6>
